data/derived/sp14/progs/unify/prog3532.ml.out
Characters 160-183:
  then ([], (fir + sec)::b2)  else (((fir + sec) / 10) + b1, (fir + sec) mod 10 ::b2)
                                    ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
